Fix a typo in schneems.html

--- a/schneems.html
+++ b/schneems.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>The call me Schneems</title>
+    <title>They call me Schneems</title>
   </head>
   <body>
     <header>
