Fix nav to include link tag, turn the sidebar into a ul, turn social media buttons into ul with img tags

--- a/schneems.html
+++ b/schneems.html
@@ -10,10 +10,10 @@
       <hr />
       <nav>
         <ul>
-          <li>Home</li>
-          <li>Categories</li>
-          <li>Tags</li>
-          <li>Top of page</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Categories</a></li>
+          <li><a href="#">Tags</a></li>
+          <li><a href="#">Top of page</a></li>
         </ul>
       </nav>  
     </header>
@@ -21,14 +21,22 @@
       <img src="Facepic">
       <h2>SCHNEEMS</h2>
       <p>
-        Rubyist at Heroku <br />
-        Teaches at University of Texas <br />
-        Taco connoisseur in Austin, TX <br />
-        <a href="#">Free University Rails...</a>
-        <a href="#">Screencasts</a>
-        <a href="#">New book!....</a>
+        <ul>
+          <li>Rubyist at Heroku</li>
+          <li>Teaches at University of Texas</li>
+          <li>Taco connoisseur in Austin, TX</li>
+          <li><a href="#">Free University Rails...</a></li>
+          <li><a href="#">Screencasts</a></li>
+          <li><a href="#">New book!....</a></li>
+        </ul>
       </p>
-      <section>Social Media buttons</section>
+      <section> 
+        <ul>
+          <li><a href="#"><img src="Github_pic"></a></li>
+          <li><a href="#"><img src="Twitter_pic>"</a></li>
+          <li><a href="#"><img src="Envelope_pic"></a></li>
+        </ul>
+      </section>
     </aside>
     <main>
       <section>
