Fix syntax in social button section

--- a/schneems.html
+++ b/schneems.html
@@ -33,7 +33,7 @@
       <section> 
         <ul>
           <li><a href="#"><img src="Github_pic"></a></li>
-          <li><a href="#"><img src="Twitter_pic>"</a></li>
+          <li><a href="#"><img src="Twitter_pic"></a></li>
           <li><a href="#"><img src="Envelope_pic"></a></li>
         </ul>
       </section>
